# python-project-50

./: Makefile  Makefile.txt  README.md  pyproject.toml  setup.cfg
.github/workflows/: hexlet-check.yml  main.yml
gendiff/: __init__.py  data.py  differ.py  generate_diff.py  get_different.py  parser.py
gendiff/code/: generate_diff.py
gendiff/formaters/: json_formatter.py  plain.py  stylish.py
gendiff/formatters/: __init__.py  json.py  plain.py  stylish.py
gendiff/scripts/: gendiff.py
tests/: test_generate_diff.py
tests/fixtures/: file_json.txt
